; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tnote.c_taosOpenNewNote.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tnote.c_taosOpenNewNote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@taosNoteMutex = common dso_local global i32 0, align 4
@taosNoteLines = common dso_local global i64 0, align 8
@taosNoteMaxLines = common dso_local global i64 0, align 8
@taosNoteOpenInProgress = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"===============  open new note  ==================\00", align 1
@PTHREAD_CREATE_DETACHED = common dso_local global i32 0, align 4
@taosThreadToOpenNewNote = common dso_local global i32 0, align 4
@taosNoteFd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosOpenNewNote() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @pthread_mutex_lock(i32* @taosNoteMutex)
  %4 = load i64, i64* @taosNoteLines, align 8
  %5 = load i64, i64* @taosNoteMaxLines, align 8
  %6 = icmp sgt i64 %4, %5
  br i1 %6, label %7, label %18

7:                                                ; preds = %0
  %8 = load i32, i32* @taosNoteOpenInProgress, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %7
  store i32 1, i32* @taosNoteOpenInProgress, align 4
  %11 = call i32 @taosNotePrint(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @pthread_attr_init(i32* %2)
  %13 = load i32, i32* @PTHREAD_CREATE_DETACHED, align 4
  %14 = call i32 @pthread_attr_setdetachstate(i32* %2, i32 %13)
  %15 = load i32, i32* @taosThreadToOpenNewNote, align 4
  %16 = call i32 @pthread_create(i32* %1, i32* %2, i32 %15, i32* null)
  %17 = call i32 @pthread_attr_destroy(i32* %2)
  br label %18

18:                                               ; preds = %10, %7, %0
  %19 = call i32 @pthread_mutex_unlock(i32* @taosNoteMutex)
  %20 = load i32, i32* @taosNoteFd, align 4
  ret i32 %20
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @taosNotePrint(i8*) #1

declare dso_local i32 @pthread_attr_init(i32*) #1

declare dso_local i32 @pthread_attr_setdetachstate(i32*, i32) #1

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i32, i32*) #1

declare dso_local i32 @pthread_attr_destroy(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
